<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GigsMobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in/Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_password_confirm">Confirm Password (optional)</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_login">Login</string>
    <string name="error_password_doesnt_match">Passwords do not match.</string>
    <string name="worker">Worker</string>
    <string name="employer">Employer</string>
    <string name="title_activity_user_detail">UserDetail</string>
    <string name="title_activity_gig_detail">GigDetailActivity</string>
    <string name="logging_in">Signing In</string>
    <string name="signing_up">Signing Up</string>
    <string name="title_activity_create_gig_form">CreateGigFormActivity</string>
    <string name="title_activity_payment_gig_form">PaymentGigFormActivity</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="signinas">Sign In As...</string>
    <string name="mygigs">My Gigs</string>
    <string name="action_create_gig">Create Gig</string>
    <string name="budget">Budget</string>
    <string name="action_create">Create</string>

    <string-array name="user_type_array">
        <item>Employer</item>
        <item>Worker</item>
    </string-array>
    <string-array name="drawer_menu">
        <item>Login</item>
        <item>My Gigs</item>
        <item>User Settings</item>
    </string-array>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="drawer_array">
        <item>Login</item>
        <item>My Gigs</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">search</string>
    <string name="title_activity_gig_messages">GigMessagesActivity</string>
    <string name="signuporsignin">Sign up or Sign in</string>
    <string name="action_messages">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="card_number">Card Number</string>
    <string name="exp_month">Month</string>
    <string name="exp_year">Year</string>
    <string name="cvc">CVC</string>
    <string name="amount">Amount</string>

</resources>
